--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
               x1="75"
               y1="200"
               x2="75"
+              y2="200"
               stroke="#EC422A"
               stroke-width="45"
               data-action="mouseover->impact-graphs#handleBarMouseover
@@ -61,9 +62,7 @@
               style="fill: white; z-index: 100"
               font-size="12px"
               data-impact-graphs-target="tooltip"
-            >
-              45
-            </text>
+            ></text>
           </g>
           <g data-impact-graphs-target="svgBar" transform="translate(20, 0)">
             <line
@@ -71,7 +70,7 @@
               x1="150"
               y1="200"
               x2="150"
-              y2="127"
+              y2="200"
               id="1"
               stroke-width="45"
               stroke="#F49A32"
@@ -97,9 +96,7 @@
               style="fill: white; z-index: 100"
               font-size="12px"
               data-impact-graphs-target="tooltip"
-            >
-              45
-            </text>
+            ></text>
           </g>
           <g transform="translate(20, 0)" data-impact-graphs-target="svgBar">
             <line
@@ -107,7 +104,7 @@
               x1="225"
               y1="200"
               x2="225"
-              y2="138"
+              y2="200"
               id="2"
               stroke-width="45"
               stroke="#FFFFFF"
@@ -133,9 +130,7 @@
               style="fill: white; z-index: 100"
               font-size="12px"
               data-impact-graphs-target="tooltip"
-            >
-              45
-            </text>
+            ></text>
           </g>
           <g transform="translate(20, 0)" data-impact-graphs-target="svgBar">
             <line
@@ -143,7 +138,7 @@
               x1="300"
               y1="200"
               x2="300"
-              y2="145"
+              y2="200"
               id="3"
               stroke-width="45"
               stroke="#70F9FC"
@@ -169,9 +164,7 @@
               style="fill: white; z-index: 100"
               font-size="12px"
               data-impact-graphs-target="tooltip"
-            >
-              45
-            </text>
+            ></text>
           </g>
         </svg>
       </div>
