--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
         data-action="change->impact-graphs#handleFilter"
       ></select>
       <div class="flex svg-container mt-10 pt-10 flex-col items-center">
+        <div class="loader"></div>
         <svg class="flex items-center" width="400" height="300">
           <g data-impact-graphs-target="svgBar" transform="translate(20, 0)">
             <line
