finalize on custome loader

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,10 @@
         data-impact-graphs-target="category"
         data-action="change->impact-graphs#handleFilter"
       ></select>
-      <div class="flex svg-container mt-10 pt-10 flex-col items-center">
-        <div class="loader"></div>
+      <div
+        class="flex svg-container mt-10 pt-10 flex-col items-center relative"
+      >
+        <div class="loader" data-impact-graphs-target="loader"></div>
         <svg class="flex items-center" width="400" height="300">
           <g data-impact-graphs-target="svgBar" transform="translate(20, 0)">
             <line
